# Benetto

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TOR-BENETTO-V2.md  gradle.properties  settings.gradle.kts
rust/: ARCHITECTURE.md  Cargo.toml
rust/src/: jni_bridge.rs  lib.rs  pipeline.rs  state.rs
rust/src/audio/: mod.rs  recorder.rs
rust/src/llm/: engine.rs  mod.rs
rust/src/vad/: detector.rs  mod.rs
rust/src/whisper/: engine.rs  mod.rs
whispercpp/examples/whisper.android/app/src/main/: AndroidManifest.xml
whispercpp/examples/whisper.android/app/src/main/java/com/whispercppdemo/: MainActivity.kt
whispercpp/examples/whisper.android/app/src/main/java/com/whispercppdemo/llm/: LlamaInference.kt
whispercpp/examples/whisper.android/app/src/main/java/com/whispercppdemo/model/: ModelDownloader.kt
whispercpp/examples/whisper.android/app/src/main/java/com/whispercppdemo/ui/main/: MainScreenViewModel.kt
whispercpp/examples/whisper.android/app/src/main/java/com/whispercppdemo/ui/theme/: Theme.kt
whispercpp/examples/whisper.android/app/src/main/res/values/: themes.xml
