[package]
name = "benetto-core"
version = "0.1.0"
edition = "2021"
description = "Benetto native audio processing — Rust/whisper-rs + candle LLM for Android"
license = "MIT"

[lib]
name = "benetto_native"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
whisper-rs = "0.13"
candle-core = "0.7"
tokenizers = "0.21"
hound = "3.5"
tokio = { version = "1", features = ["rt", "sync"] }
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "1"
once_cell = "1"
log = "0.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
